PROJECT(Taller1)                                                                                                                                                                                                                       
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)                                                                                                                                                                                                 
ADD_EXECUTABLE(Taller1 main.cpp system.cpp linkedList.cpp node.cpp region.cpp)    
